<resources>
    <string name="app_name">Car Rental</string>
    <string name="todo">TODO</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="car_icon">car icon</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_click_here">New User ? Click here</string>
    <string name="sign_in_">Sign in</string>
    <string name="sign_in__">sign in</string>
    <string name="do_you_already_have_an_account">do you already have an account?</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>

</resources>