<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color">

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/sign_in__"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        android:layout_width="34dp"
        android:layout_height="29dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="44dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/car_icon"
        android:layout_width="207dp"
        android:layout_height="171dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/car_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/car_icon" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="316dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_icon" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="316dp"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail" />

    <Button
        android:id="@+id/sign_up_intent"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/new_user_click_here"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>