<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_color"
        android:visibility="visible">

        <EditText
            android:id="@+id/name"
            android:layout_width="316dp"
            android:layout_height="36dp"
            android:layout_marginTop="35dp"
            android:autofillHints=""
            android:background="@drawable/rounded"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#070707"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_icon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/car_icon"
            android:layout_width="207dp"
            android:layout_height="171dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/car_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/car_icon" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="316dp"
            android:layout_height="36dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="#070707"
            android:textColorHint="#0C0C0C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="316dp"
            android:layout_height="36dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="#050505"
            android:textColorHint="#0C0C0C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mail" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/sign_up"
            app:backgroundTint="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass" />

        <Button
            android:id="@+id/return1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/do_you_already_have_an_account"
            app:backgroundTint="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>